[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nambroa <ambroanicolas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.7.0"
drf-writable-nested = "^0.6.3"
django-filter = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
